
      BOOKKEEPER-338: Create Version.NEW and Version.ANY static instances of Version so that were not passing around nulls (sijie via ivank)

      BOOKKEEPER-32: Clean up LOG.debug statements (Stu Hood via sijie)

      BOOKKEEPER-484: Misc fixes for test scripts (ivank via fpj)

      BOOKKEEPER-483: precommit tests only check toplevel rat file, not the one for submodules. (ivank via fpj)

      bookkeeper-server:

        BOOKKEEPER-183: Provide tools to read/check data files in bookie server (sijie via ivank)

        BOOKKEEPER-307: BookieShell introduces 4 findbugs warnings (ivank via sijie)

        BOOKKEEPER-322: New protobufs generates findbugs errors (ivank)

        BOOKKEEPER-280: LedgerHandle.addEntry() should return an entryId (mmerli via ivank)

        BOOKKEEPER-324: Flakeyness in LedgerCreateDeleteTest (ivank)

        BOOKKEEPER-318: Spelling mistake in MultiCallback log message. (surendra via sijie)

        BOOKKEEPER-296: It's better provide stop script for bookie (nijel via sijie)

        BOOKKEEPER-294: Not able to start the bookkeeper before the ZK session timeout. (rakeshr via ivank)

	BOOKKEEPER-327: System.currentTimeMillis usage in BookKeeper (uma via fpj)

        BOOKKEEPER-349: Entry logger should close all the chennels which are there in Map, instead of closing only current channel. (umamaheswararao via sijie)

        BOOKKEEPER-326: DeadLock during ledger recovery (rakeshr via ivank)

        BOOKKEEPER-372: Check service name in bookie start/stop script. (nijel via ivank)

 	BOOKKEEPER-354: [BOOKKEEPER-296] [Documentation] Modify the bookkeeper start script and document the bookkeeper stop command in bookkeeperConfig.xml (Kiran BC via ivank)
 
        BOOKKEEPER-378: ReplicationWorker may not get ZK watcher notification on UnderReplication ledger lock deletion. (umamaheswararao & ivank via ivank)
