@@ -272,30 +272,27 @@ public abstract class BookKeeperClusterTestCase extends TestCase {
      */
     public CountDownLatch sleepBookie(InetSocketAddress addr, final int seconds)
             throws InterruptedException, IOException {
-        final CountDownLatch l = new CountDownLatch(1);
-        final String name = "NIOServerFactory-" + addr.getPort();
-        Thread[] allthreads = new Thread[Thread.activeCount()];
-        Thread.enumerate(allthreads);
-        for (final Thread t : allthreads) {
-            if (t.getName().equals(name)) {
+        for (final BookieServer bookie : bs) {
+            if (bookie.getLocalAddress().equals(addr)) {
+                final CountDownLatch l = new CountDownLatch(1);
                 Thread sleeper = new Thread() {
-                    @Override
-                    public void run() {
-                        try {
-                            t.suspend();
-                            l.countDown();
-                            Thread.sleep(seconds*1000);
-                            t.resume();
-                        } catch (Exception e) {
-                            LOG.error("Error suspending thread", e);
+                        @Override
+                        public void run() {
+                            try {
+                                bookie.suspendProcessing();
+                                l.countDown();
+                                Thread.sleep(seconds*1000);
+                                bookie.resumeProcessing();
+                            } catch (Exception e) {
+                                LOG.error("Error suspending bookie", e);
+                            }
                         }
-                    }
-                };
+                    };
                 sleeper.start();
                 return l;
             }
         }
-        throw new IOException("Bookie thread not found");
+        throw new IOException("Bookie not found");
     }
 
     /**
@@ -310,19 +307,16 @@ public abstract class BookKeeperClusterTestCase extends TestCase {
      */
     public void sleepBookie(InetSocketAddress addr, final CountDownLatch l)
             throws InterruptedException, IOException {
-        final String name = "NIOServerFactory-" + addr.getPort();
-        Thread[] allthreads = new Thread[Thread.activeCount()];
-        Thread.enumerate(allthreads);
-        for (final Thread t : allthreads) {
-            if (t.getName().equals(name)) {
+        for (final BookieServer bookie : bs) {
+            if (bookie.getLocalAddress().equals(addr)) {
                 Thread sleeper = new Thread() {
                     public void run() {
                         try {
-                            t.suspend();
+                            bookie.suspendProcessing();
                             l.await();
-                            t.resume();
+                            bookie.resumeProcessing();
                         } catch (Exception e) {
-                            LOG.error("Error suspending thread", e);
+                            LOG.error("Error suspending bookie", e);
                         }
                     }
                 };
@@ -330,7 +324,7 @@ public abstract class BookKeeperClusterTestCase extends TestCase {
                 return;
             }
         }
-        throw new IOException("Bookie thread not found");
+        throw new IOException("Bookie not found");
     }
 
     /**
